# akonadiexport

./: .gitignore  CMakeLists.txt  README
doc/: CMakeLists.txt
src/: CMakeLists.txt  Messages.sh  README  akonadiexport.cpp  akonadiexport.desktop  akonadiexport.h  main.cpp
